tests/baselines/reference/TypeArgumentList1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,1): error TS2552: Cannot find name 'Foo'. Did you mean 'JSON'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,1): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,1): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,5): error TS2552: Cannot find name 'A'. Did you mean 'NaN'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,7): error TS2552: Cannot find name 'B'. Did you mean 'NaN'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,9): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,11): error TS2552: Cannot find name 'C'. Did you mean 'NaN'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,14): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts(1,14): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1.ts (9 errors) ====
    Foo<A,B,\ C>(4, 5, 6);
    ~~~
!!! error TS2552: Cannot find name 'Foo'. Did you mean 'JSON'?
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
        ~
!!! error TS2552: Cannot find name 'A'. Did you mean 'NaN'?
          ~
!!! error TS2552: Cannot find name 'B'. Did you mean 'NaN'?
            
!!! error TS1127: Invalid character.
              ~
!!! error TS2552: Cannot find name 'C'. Did you mean 'NaN'?
                 ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                 ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.